# hb-noninvasive

./: .gitignore  DOCS.md  README.md  pyproject.toml  requirements.in
notebooks/: eda-correlation.ipynb  eda-signal.ipynb  eda-sim-signal.ipynb  eda.ipynb  eda_baseline.ipynb  merge.ipynb  readme.md  signal_res.ipynb  train-fft.ipynb  train-final.ipynb  train-trials.ipynb  train.ipynb
scripts/: bootstrap_train.py  correlation.py  merge.py  preprocess.py  train-all.py  train.py
scripts/magic/: preprocessor.py
